--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,6 +23,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Dental Clinic Management System</title>
+    <style>
+      .logo {
+         width: 100%;
+         height: 31px;
+         background: rgba(255,255,255,.2);
+         margin: 16px 0;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
