--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,6 +30,20 @@
          background: rgba(255,255,255,.2);
          margin: 16px 0;
       }
+      .trigger {
+      font-size: 18px;
+      line-height: 64px;
+      padding: 24px;
+      cursor: pointer;
+      transition: color .3s;
+      }
+
+      .trigger:hover {
+         color: #1890ff;
+         background-color: #ececec;
+      }
+
+     
     </style>
   </head>
   <body>
