Add DentalRecord component w/ boilerplate

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,7 @@
     -->
     <title>Dental Clinic Management System</title>
     <style>
+
       .logo {
          width: 100%;
          height: 31px;
@@ -41,6 +42,15 @@
       .trigger:hover {
          color: #1890ff;
          background-color: #ececec;
+      }
+
+      .spots polygon, .spots path {
+         -webkit-transition:fill .25s;
+         transition:fill .25s;
+      }
+
+      .spots polygon:hover, .spots polygon:active, .spots path:hover, .spots path:active {
+         fill:#dddddd !important;
       }
 
      
