Can now change patient's child teeth chart dynamically each tooth

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -49,6 +49,10 @@
          transition:fill .25s;
       }
 
+      .spots polygon:hover, .spots path:hover {
+         cursor: pointer;
+      }
+
       .spots polygon:hover, .spots polygon:active, .spots path:hover, .spots path:active {
          fill:#dddddd !important;
       }
