--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,9 +27,10 @@
 
       .logo {
          width: 100%;
-         height: 31px;
-         background: rgba(255,255,255,.2);
+         /* background: rgba(255,255,255,.2); */
          margin: 16px 0;
+         text-align: center;
+         padding: 0 5px;
       }
       .trigger {
       font-size: 18px;
